--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="artworks">
       <!-- Header -->
       <div class="header" id="myHeader">
-        <h1>Artworks</h1>
+        <h1>artworks</h1>
         <p>Click on the buttons to change the grid view.</p>
         <button class="btn" onclick="one()">1</button>
         <button class="btn active" onclick="two()">2</button>
