--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </div>
       <div class="row">
         <div class="column">
-          <img src="/assets/crntly.JPG" class="contact_img">
+          <img src="./assets/crntly.JPG" class="contact_img">
         </div>
         <div class="column">
           <form action="mailto:gbballin3@gmail.com" method="post" enctype="text/plain">
