--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="about_container">
       <div class="flex_container2">
         <div class="flex_img">
-          <img src="/assets/IMG_0294.jpg" class="about_img">
+          <img src="./assets/IMG_0294.jpg" class="about_img">
         </div>
         <div class="flex_text">
           <p class="about_text">Hello my name is Greg Burris, I am a graphic artist, web developer, and a painter. I
@@ -60,20 +60,20 @@
       <!-- Photo Grid -->
       <div class="row_gallery">
         <div class="column_gallery">
-          <img src="/assets/IMG_0430.JPG" style="width:100%">
-          <img src="/assets/Tattoo.jpg" style="width:100%">
+          <img src="./assets/IMG_0430.JPG" style="width:100%">
+          <img src="./assets/Tattoo.jpg" style="width:100%">
         </div>
         <div class="column_gallery">
-          <img src="/assets/Untitled_Artwork.JPG" style="width:100%">
-          <img src="/assets/IMG_0349.JPG" style="width:100%">
+          <img src="./assets/Untitled_Artwork.JPG" style="width:100%">
+          <img src="./assets/IMG_0349.JPG" style="width:100%">
         </div>
         <div class="column_gallery">
-          <img src="/assets/Luna.jpg" style="width:100%">
-          <img src="/assets/Kylie.jpg" style="width:100%">
+          <img src="./assets/Luna.jpg" style="width:100%">
+          <img src="./assets/Kylie.jpg" style="width:100%">
         </div>
         <div class="column_gallery">
-          <img src="/assets/supagood.jpg" style="width:100%">
-          <img src="/assets/SnakemanLuffy.jpg" style="width:100%">
+          <img src="./assets/supagood.jpg" style="width:100%">
+          <img src="./assets/SnakemanLuffy.jpg" style="width:100%">
         </div>
       </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="mySlidesMobile fade">
           <div class="flex_container3">
             <div class="numbertext">1 / 6</div>
-            <img src="/assets/91A03ED8-37D7-4E00-A753-91B4713F5C66.JPG" class="slide_img">
+            <img src="./assets/91A03ED8-37D7-4E00-A753-91B4713F5C66.JPG" class="slide_img">
             <!-- <img src="/assets/IMG_0430.JPG" class="slide_img_2"> -->
           </div>
         </div>
@@ -94,14 +94,14 @@
         <div class="mySlidesMobile fade">
           <div class="flex_container3">
             <div class="numbertext">2 / 6</div>
-            <img src="/assets/IMG_0430.JPG" class="slide_img">
+            <img src="./assets/IMG_0430.JPG" class="slide_img">
           </div>
         </div>
 
         <div class="mySlidesMobile fade">
           <div class="flex_container3">
             <div class="numbertext">3 / 6</div>
-            <img src="/assets/Untitled_Artwork.JPG" class="slide_img">
+            <img src="./assets/Untitled_Artwork.JPG" class="slide_img">
             <!-- <img src="/assets/IMG_0349.JPG" class="slide_img_2"> -->
           </div>
         </div>
@@ -110,14 +110,14 @@
         <div class="mySlidesMobile fade">
           <div class="flex_container3">
             <div class="numbertext">4 / 6</div>
-            <img src="/assets/IMG_0349.JPG" class="slide_img">
+            <img src="./assets/IMG_0349.JPG" class="slide_img">
           </div>
         </div>
 
         <div class="mySlidesMobile fade">
           <div class="flex_container3">
             <div class="numbertext">5 / 6</div>
-            <img src="/assets/supagood.jpg" class="slide_img">
+            <img src="./assets/supagood.jpg" class="slide_img">
             <!-- <img src="/assets/Luna.jpg" class="slide_img_2"> -->
           </div>
         </div>
@@ -125,7 +125,7 @@
         <div class="mySlidesMobile fade">
           <div class="flex_container3">
             <div class="numbertext">6 / 6</div>
-            <img src="/assets/Luna.jpg" class="slide_img">
+            <img src="./assets/Luna.jpg" class="slide_img">
           </div>
         </div>
 
