--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <div id="contact">
     <div class="contact_container">
       <div style="text-align:center">
-        <h2>Contact Me</h2>
+        <h2>contact Me</h2>
         <p>Leave me a message to learn more about me, and Currently.</p>
       </div>
       <div class="row">
