--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Art De Greg</title>
   <meta name="author" content="">
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
 
   <link href="styles/mystyles.css" rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet"> -->
