--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
     content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, viewport-fit=cover">
 
   <link href="styles/mystyles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Roboto&display=swap" rel="stylesheet">
 </head>
+<style>
+  .w3-leftbar {
+    border-left: 6px solid red !important;
+  }
+</style>
 
 <body>
   <div id="home">
@@ -38,7 +44,7 @@
   </div>
 
   <div id="about">
-    <div class="about_container">
+    <!-- <div class="about_container">
       <div class="card">
         <img src="./assets/IMG_0294.jpg" alt="Greg" style="width:100%">
         <h1>Hello, I'm Greg Burris</h1>
@@ -61,181 +67,225 @@
             the best designer/developer I can be.</p>
         </div>
       </div>
-    </div>
-  </div>
-
-  <div id="artworks">
-    <!-- Header -->
-    <div class="header" id="myHeader">
-      <h2>Artworks</h2>
-      <p>Click on the buttons to change the grid view.</p>
-      <button class="btn" onclick="one()">1</button>
-      <button class="btn active" onclick="two()">2</button>
-      <button class="btn" onclick="four()">4</button>
-    </div>
-
-    <!-- Photo Grid -->
-    <div class="row_gallery">
-      <div class="column_gallery">
-        <img src="./assets/IMG_0430.JPG" style="width:100%">
-        <img src="./assets/Tattoo.jpg" style="width:100%">
-      </div>
-      <div class="column_gallery">
-        <img src="./assets/Untitled_Artwork.JPG" style="width:100%">
-        <img src="./assets/IMG_0349.JPG" style="width:100%">
-      </div>
-      <div class="column_gallery">
-        <img src="./assets/Luna.jpg" style="width:100%">
-        <img src="./assets/Kylie.jpg" style="width:100%">
-      </div>
-      <div class="column_gallery">
-        <img src="./assets/supagood.jpg" style="width:100%">
-        <img src="./assets/SnakemanLuffy.jpg" style="width:100%">
-      </div>
-    </div>
-  </div>
-
-  <div id="contact">
-    <div class="contact_container">
-      <div style="text-align:center; margin-top: 50px;">
-        <h2>Contact Me</h2>
-        <p>Leave me a message to learn more about me, and Currently.</p>
-      </div>
-      <div class="row">
-        <div class="column">
-          <img src="./assets/crntly.JPG" class="contact_img">
+    </div> -->
+    <!-- About section -->
+    <div class="w3-container about-color w3-center w3-text-light-grey w3-padding-32" id="about">
+      <h2>About Me</h2>
+      <img src="/assets/BioPic.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+      <div class="w3-content w3-justify" style="max-width:600px">
+        <h4>Greg Burris</h4>
+        <p>I am a graphic artist, web developer, and a painter. I
+          currently attend Michigan State university marjoring in Media & Information and minioring in Graphic
+          Design.
+          My main skillset consists of Illustrator, Photoshop, Indesign, HTML5, CSS, and Javascript. My
+          objective is
+          to use my creative thinking tools, problem solving skills, technical skills, and communication
+          skills to be
+          the best designer/developer I can be.
+        </p>
+        <p>Co-Founder of Currently.</p>
+        <hr class="w3-opacity">
+        <h4 class="w3-padding-16">Technical Skills</h4>
+        <p class="w3-wide">Web Design</p>
+        <div class="w3-panel w3-leftbar cards">
+          <p>HTML5</p>
+          <p>CSS</p>
+          <p>JAVASCRIPT</p>
+          <p>C#</p>
+          <p>PYTHON</p>
+          <p>D3</p>
         </div>
-        <div class="column">
-          <form action="mailto:gbballin3@gmail.com" method="post" enctype="text/plain">
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name..">
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-            <label for="subject">Subject</label>
-            <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-            <input type="submit" value="Submit">
-          </form>
+        <p class="w3-wide">Graphic Design</p>
+        <div class="w3-panel w3-leftbar cards">
+          <p>ADOBE PHOTOSHOP</p>
+          <p>ADOBE ILLUSTRATOR</p>
+          <p>ADOBE INDESIGN</p>
+        </div>
+        <hr class="w3-opacity">
+
+      </div>
+    </div>
+
+    <div id="artworks">
+      <!-- Header -->
+      <div class="header" id="myHeader">
+        <h2>Artworks</h2>
+        <p>Click on the buttons to change the grid view.</p>
+        <button class="btn" onclick="one()">1</button>
+        <button class="btn active" onclick="two()">2</button>
+        <button class="btn" onclick="four()">4</button>
+      </div>
+
+      <!-- Photo Grid -->
+      <div class="row_gallery">
+        <div class="column_gallery">
+          <img src="./assets/IMG_0430.JPG" style="width:100%">
+          <img src="./assets/Tattoo.jpg" style="width:100%">
+        </div>
+        <div class="column_gallery">
+          <img src="./assets/Untitled_Artwork.JPG" style="width:100%">
+          <img src="./assets/IMG_0349.JPG" style="width:100%">
+        </div>
+        <div class="column_gallery">
+          <img src="./assets/Luna.jpg" style="width:100%">
+          <img src="./assets/Kylie.jpg" style="width:100%">
+        </div>
+        <div class="column_gallery">
+          <img src="./assets/supagood.jpg" style="width:100%">
+          <img src="./assets/SnakemanLuffy.jpg" style="width:100%">
+        </div>
+      </div>
+
+      <!-- Pagination -->
+      <div class="w3-center w3-padding-32">
+        <div class="w3-bar">
+          <a href="#artworks" class="w3-bar-item w3-button w3-hover-black">BACK TO TOP</a>
+        </div>
+      </div>
+
+    </div>
+
+    <div id="contact">
+      <div class="contact_container">
+        <div style="text-align:center; margin-top: 50px;">
+          <h2>Contact Me</h2>
+          <p>Leave me a message to learn more about me, and Currently.</p>
+        </div>
+        <div class="row">
+          <div class="column">
+            <img src="./assets/crntly.JPG" class="contact_img">
+          </div>
+          <div class="column">
+            <form action="mailto:gbballin3@gmail.com" method="post" enctype="text/plain">
+              <label for="fname">First Name</label>
+              <input type="text" id="fname" name="firstname" placeholder="Your name..">
+              <label for="lname">Last Name</label>
+              <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+              <label for="subject">Subject</label>
+              <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+              <input type="submit" value="Submit">
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div id="navbar">
-    <div id="myLinks">
-      <a href="#home" onclick="theFunction()">Home</a>
-      <a href="#about" onclick="theFunction()">About</a>
-      <a href="#artworks" onclick="theFunction()">Artworks</a>
-      <a href="#contact" onclick="theFunction()">Contact</a>
+    <div id="navbar">
+      <div id="myLinks">
+        <a href="#home" onclick="theFunction()">Home</a>
+        <a href="#about" onclick="theFunction()">About</a>
+        <a href="#artworks" onclick="theFunction()">Artworks</a>
+        <a href="#contact" onclick="theFunction()">Contact</a>
+      </div>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
     </div>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>
 
-  <script>
-    // When the user scrolls down 20px from the top of the document, slide down the navbar
-    window.onscroll = function () {
-      scrollFunction()
-    };
+    <script>
+      // When the user scrolls down 20px from the top of the document, slide down the navbar
+      window.onscroll = function () {
+        scrollFunction()
+      };
 
-    function scrollFunction() {
-      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        document.getElementById("navbar").style.top = "0";
-      } else {
-        document.getElementById("navbar").style.top = "-75px";
+      function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+          document.getElementById("navbar").style.top = "0";
+        } else {
+          document.getElementById("navbar").style.top = "-75px";
+        }
       }
-    }
 
-    function myFunction() {
-      var x = document.getElementById("myLinks");
-      if (x.style.display === "block") {
-        x.style.display = "none";
-      } else {
-        x.style.display = "block";
+      function myFunction() {
+        var x = document.getElementById("myLinks");
+        if (x.style.display === "block") {
+          x.style.display = "none";
+        } else {
+          x.style.display = "block";
+        }
       }
-    }
 
-    function theFunction() {
-      var x = document.getElementById("myLinks");
-      if (x.style.display === "block") {
-        x.style.display = "none";
+      function theFunction() {
+        var x = document.getElementById("myLinks");
+        if (x.style.display === "block") {
+          x.style.display = "none";
+        }
       }
-    }
 
-    // Get the elements with class="column"
-    var elements = document.getElementsByClassName("column_gallery");
+      // Get the elements with class="column"
+      var elements = document.getElementsByClassName("column_gallery");
 
-    // Declare a loop variable
-    var i;
+      // Declare a loop variable
+      var i;
 
-    // Full-width images
-    function one() {
-      for (i = 0; i < elements.length; i++) {
-        elements[i].style.msFlex = "100%"; // IE10
-        elements[i].style.flex = "100%";
+      // Full-width images
+      function one() {
+        for (i = 0; i < elements.length; i++) {
+          elements[i].style.msFlex = "100%"; // IE10
+          elements[i].style.flex = "100%";
+        }
       }
-    }
 
-    // Two images side by side
-    function two() {
-      for (i = 0; i < elements.length; i++) {
-        elements[i].style.msFlex = "50%"; // IE10
-        elements[i].style.flex = "50%";
+      // Two images side by side
+      function two() {
+        for (i = 0; i < elements.length; i++) {
+          elements[i].style.msFlex = "50%"; // IE10
+          elements[i].style.flex = "50%";
+        }
       }
-    }
 
-    // Four images side by side
-    function four() {
-      for (i = 0; i < elements.length; i++) {
-        elements[i].style.msFlex = "25%"; // IE10
-        elements[i].style.flex = "25%";
+      // Four images side by side
+      function four() {
+        for (i = 0; i < elements.length; i++) {
+          elements[i].style.msFlex = "25%"; // IE10
+          elements[i].style.flex = "25%";
+        }
       }
-    }
 
-    // Add active class to the current button (highlight it)
-    var header = document.getElementById("myHeader");
-    var btns = header.getElementsByClassName("btn");
-    for (var i = 0; i < btns.length; i++) {
-      btns[i].addEventListener("click", function () {
-        var current = document.getElementsByClassName("active");
-        current[0].className = current[0].className.replace(" active", "");
-        this.className += " active";
-      });
-    }
-
-    const toggleSwitch = document.querySelector('.theme-switch input[type="checkbox"]');
-
-    function switchTheme(e) {
-      if (e.target.checked) {
-        document.documentElement.setAttribute('data-theme', 'dark');
-      } else {
-        document.documentElement.setAttribute('data-theme', 'light');
+      // Add active class to the current button (highlight it)
+      var header = document.getElementById("myHeader");
+      var btns = header.getElementsByClassName("btn");
+      for (var i = 0; i < btns.length; i++) {
+        btns[i].addEventListener("click", function () {
+          var current = document.getElementsByClassName("active");
+          current[0].className = current[0].className.replace(" active", "");
+          this.className += " active";
+        });
       }
-    }
 
-    toggleSwitch.addEventListener('change', switchTheme, false);
+      const toggleSwitch = document.querySelector('.theme-switch input[type="checkbox"]');
 
-    function switchTheme(e) {
-      if (e.target.checked) {
-        document.documentElement.setAttribute('data-theme', 'dark');
-        localStorage.setItem('theme', 'dark'); //add this
-      } else {
-        document.documentElement.setAttribute('data-theme', 'light');
-        localStorage.setItem('theme', 'light'); //add this
+      function switchTheme(e) {
+        if (e.target.checked) {
+          document.documentElement.setAttribute('data-theme', 'dark');
+        } else {
+          document.documentElement.setAttribute('data-theme', 'light');
+        }
       }
-    }
 
+      toggleSwitch.addEventListener('change', switchTheme, false);
 
-    const currentTheme = localStorage.getItem('theme') ? localStorage.getItem('theme') : null;
-
-    if (currentTheme) {
-      document.documentElement.setAttribute('data-theme', currentTheme);
-
-      if (currentTheme === 'dark') {
-        toggleSwitch.checked = true;
+      function switchTheme(e) {
+        if (e.target.checked) {
+          document.documentElement.setAttribute('data-theme', 'dark');
+          localStorage.setItem('theme', 'dark'); //add this
+        } else {
+          document.documentElement.setAttribute('data-theme', 'light');
+          localStorage.setItem('theme', 'light'); //add this
+        }
       }
-    }
-  </script>
+
+
+      const currentTheme = localStorage.getItem('theme') ? localStorage.getItem('theme') : null;
+
+      if (currentTheme) {
+        document.documentElement.setAttribute('data-theme', currentTheme);
+
+        if (currentTheme === 'dark') {
+          toggleSwitch.checked = true;
+        }
+      }
+    </script>
 </body>
 
 </html>
