--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- About section -->
     <div class="w3-container about-color w3-center w3-text-light-grey w3-padding-32" id="about">
       <h2>About Me</h2>
-      <img src="/assets/BioPic.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+      <img src="./assets/BioPic.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
       <div class="w3-content w3-justify" style="max-width:600px">
         <h4>Greg Burris</h4>
         <p>I am a graphic artist, web developer, and a painter. I
