--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </p>
         <p>Co-Founder of Currently.</p>
         <hr class="w3-opacity">
-        <h4 class="w3-padding-16">Technical Skills</h4>
+        <h4>Technical Skills</h4>
         <p class="w3-wide">Web Design</p>
         <div class="w3-panel w3-leftbar cards">
           <p>HTML5</p>
