--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id="topnav">
         <li class="link1"><a href="#home">Home</a></li>
         <li class="link2"><a href="#about">About</a></li>
-        <li class="link3"><a href="#artworks">Artworks</a></li>
+        <li class="link3"><a href="#projects">Projects</a></li>
         <li class="link4"><a href="#contact">Contact</a></li>
       </div>
       <div class="flex-container">
@@ -82,10 +82,10 @@
       </div>
     </div>
 
-    <div id="artworks">
+    <div id="projects">
       <!-- Header -->
       <div class="header" id="myHeader">
-        <h2>Artworks</h2>
+        <h2>Projects</h2>
         <p>Click on the buttons to change the grid view.</p>
         <button class="btn" onclick="one()">1</button>
         <button class="btn active" onclick="two()">2</button>
@@ -95,18 +95,22 @@
       <!-- Photo Grid -->
       <div class="row_gallery">
         <div class="column_gallery">
+          <img src="./assets/DesktopWireframe.jpg" style="width:100%">
           <img src="./assets/IMG_0430.JPG" style="width:100%">
           <img src="./assets/Tattoo.jpg" style="width:100%">
         </div>
         <div class="column_gallery">
+          <img src="./assets/MobileWireframe.jpg" style="width:100%">
           <img src="./assets/Untitled_Artwork.JPG" style="width:100%">
           <img src="./assets/IMG_0349.JPG" style="width:100%">
         </div>
         <div class="column_gallery">
+          <img src="./assets/CodePreview.jpg" style="width:100%">
           <img src="./assets/Luna.jpg" style="width:100%">
           <img src="./assets/Kylie.jpg" style="width:100%">
         </div>
         <div class="column_gallery">
+          <img src="./assets/StateMap.jpg" style="width:100%">
           <img src="./assets/supagood.jpg" style="width:100%">
           <img src="./assets/SnakemanLuffy.jpg" style="width:100%">
         </div>
@@ -115,7 +119,7 @@
       <!-- Pagination -->
       <div class="w3-center w3-padding-32">
         <div class="w3-bar">
-          <a href="#artworks" class="w3-bar-item w3-button w3-hover-black">BACK TO TOP</a>
+          <a href="#projects" class="w3-bar-item w3-button w3-hover-black">BACK TO TOP</a>
         </div>
       </div>
 
@@ -150,7 +154,7 @@
       <div id="myLinks">
         <a href="#home" onclick="theFunction()">Home</a>
         <a href="#about" onclick="theFunction()">About</a>
-        <a href="#artworks" onclick="theFunction()">Artworks</a>
+        <a href="#projects" onclick="theFunction()">projects</a>
         <a href="#contact" onclick="theFunction()">Contact</a>
       </div>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
