Changed website around

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </label>
           <em>Enable Dark Mode</em>
         </div>
-        <h1 class="center_text">Welcome to <span class="white">Art de Greg</span></h1>
+        <h1 class="center_text">Welcome To My <span class="white">Portfolio</span></h1>
       </div>
     </header>
   </div>
@@ -50,7 +50,7 @@
       <img src="./assets/BioPic.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
       <div class="w3-content w3-justify" style="max-width:600px">
         <h4>Greg Burris</h4>
-        <p>I am a graphic artist, web developer, and a painter. I
+        <p>I am a web developer, graphic artist, and a painter. I
           currently attend Michigan State university marjoring in Media & Information and minioring in Graphic
           Design.
           My main skillset consists of Illustrator, Photoshop, Indesign, HTML5, CSS, and Javascript. My
@@ -95,24 +95,24 @@
       <!-- Photo Grid -->
       <div class="row_gallery">
         <div class="column_gallery">
+          <img src="./assets/bluemockup.jpg" style="width:100%">
+          <img src="./assets/statssheet.jpg" style="width:100%">
+          <img src="./assets/CodePreview.jpg" style="width:100%">
+        </div>
+        <div class="column_gallery">
+          <img src="./assets/blackmockup.jpg" style="width:100%">
+          <img src="./assets/qline.jpg" style="width:100%">
+          <img src="./assets/StateMap.jpg" style="width:100%">
+        </div>
+        <div class="column_gallery">
           <img src="./assets/DesktopWireframe.jpg" style="width:100%">
-          <img src="./assets/IMG_0430.JPG" style="width:100%">
-          <img src="./assets/Tattoo.jpg" style="width:100%">
+          <img src="./assets/supagood.jpg" style="width:100%">
+          <img src="./assets/SnakemanLuffy.jpg" style="width:100%">
         </div>
         <div class="column_gallery">
           <img src="./assets/MobileWireframe.jpg" style="width:100%">
-          <img src="./assets/Untitled_Artwork.JPG" style="width:100%">
-          <img src="./assets/IMG_0349.JPG" style="width:100%">
-        </div>
-        <div class="column_gallery">
-          <img src="./assets/CodePreview.jpg" style="width:100%">
-          <img src="./assets/Luna.jpg" style="width:100%">
-          <img src="./assets/Kylie.jpg" style="width:100%">
-        </div>
-        <div class="column_gallery">
-          <img src="./assets/StateMap.jpg" style="width:100%">
-          <img src="./assets/supagood.jpg" style="width:100%">
-          <img src="./assets/SnakemanLuffy.jpg" style="width:100%">
+          <img src="./assets/Akira.JPG" style="width:100%">
+          <img src="./assets/asianrain.JPG" style="width:100%">
         </div>
       </div>
 
